--- a/fly.toml
+++ b/fly.toml
@@ -1,29 +1,23 @@
-app = "delivery-backend-tunombre"
+# fly.toml app configuration file generated for apptracker on 2025-08-27T02:28:20Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[[services]]
-  internal_port = 3000
-  protocol = "tcp"
+app = 'apptracker'
+primary_region = 'dfw'
 
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
+[build]
 
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-[[services]]
-  internal_port = 3000
-  protocol = "tcp"
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    interval = 10000
-    timeout = 2000
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
